# tapl-rs

./: .gitignore  Cargo.toml  README.md  add.sh  memo.md  notes.md  rust-toolchain.toml
.github/workflows/: build.yml  publish.yml
docs/: next.md
fullsimple/: Cargo.toml  notes.md
fullsimple/src/: eval.rs  lib.rs  main.rs  parser.rs  span.rs  syntax.rs  typing.rs
fullsimple/src/parser/: utils.rs
fullsimple/src/syntax/: context.rs  pattern.rs  pattype.rs  term.rs  type.rs
fullsimple/tests/: error_position_test.rs  parse_typing_eval.rs
languages/fullsimple/: Cargo.toml  notes.md
languages/fullsimple/src/: eval.rs  main.rs  span.rs  syntax.rs
languages/simplebase/: Cargo.toml
languages/simplebool/: Cargo.toml
languages/simplelambdamu/: Cargo.toml
languages/untyped/: Cargo.toml
languages/untyped/src/: lib.rs  main.rs  syntax.rs
languages/untyped/src/parser/: utils.rs
simplebase/: Cargo.toml  notes.md  out.typ
simplebase/src/: eval.rs  lib.rs  main.rs  parser.rs  proof.rs  typing.rs
simplebool/: Cargo.toml  notes.md
simplebool/src/: eval.rs  lib.rs  main.rs  parser.rs  syntax.rs  typing.rs
simplebool/tests/: type_error_test.rs
simplelambdamu/: Cargo.toml  notes.md  out.typ
simplelambdamu/src/: eval.rs  main.rs  parser.rs  proof.rs  typing.rs
simplelambdamu/tests/: parse_typing_eval.rs
untyped/: Cargo.toml  notes.md
untyped/src/: eval.rs  lib.rs  main.rs  parser.rs  span.rs  syntax.rs  term.rs
untyped/tests/: parse_and_eval.rs
wasm/simplebase-wasm/: Cargo.toml
wasm/simplelambdamu-wasm/: Cargo.toml
(+37 files in other folders)
