[package]
name = "untyped"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "untyped"
path = "src/main.rs"

[dependencies]
nom = "8.0.0"
nom_locate = "5.0.0"
num = "0.4.3"
rstest = "0.25.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = { version = "15.0.0",features = ["with-file-history"] }
